Flex box process documentation done and also paragraph for Donation Pages section

--- a/index.html
+++ b/index.html
@@ -28,16 +28,17 @@
 
 	<main>
 		<section>
-        <h3>Web Proposal/Prototype Link: </h2>
-        <h4> <a href = "proposal.html"> Proposal Link </a> </h3>
+        <h3>Web Proposal/Prototype Link: </h3>
+        <h4> <a href = "proposal.html"> Proposal Link </a> </h4>
         </br>
-        <h3 id = "Design_Changes">Design Changes and Iteration</h2>
-        <h4> From 8 pages to 5 pages:</h3>
+        <h3 id = "Design_Changes">Design Changes and Iteration</h3>
+        <h4> From 8 pages to 5 pages:</h4>
         <p>The proper changes of my web iterations were done in accordance to the need for only 5 pages (in accordance to the marking criteria) and hence the reduction from 8 pages to 5 pages were done, alongside considerations of mobile device resolution (to which whilst were considered and designed nicely, had not been properly addressed in the final prototype/design as discussed more in the self-reflection/conclusion stage of this documentation). </p>
           
         <p> The format of doing it as a 'single page' approach also provided for easier and simplistic navigation - combining what could've been multiple pages into 1 long scrolling page allowing for once again, simple easy and aesthethic design. Whilst this also counted as one page (when I had originally perceived it as each scrolling page being a page) there was also an additional page in the donation section - whereby the link to a seperate donation form helped people can focus on the goal of donating - being likely to follow the call to action to donate as a result. Below demonstrates the image comparisons from 8 pages to 5 pages. </p>
         </br>
         <h4> 8 pages (top image) to 5 pages (bottom image): </h4> 
+        </br>
         <img src = "8_pages.png" alt = "Sitemap2" style = "width: 100%">
         </br>
         <img src = "5_pages.png" alt = "Sitemap2" style = "width: 100%">
@@ -106,12 +107,35 @@
 
       <section>
         <h3 id = "Flex_Box"> Flex Box Process for Our Impact and Your Impact Pages</h2> 
-        <p> The proper changes of my web iterations were done in accordance to the need for only 5 pages (in accordance to the marking criteria) and hence the reduction from 7 pages to 5 pages were done, alongside considerations of mobile device resolution (to which whilst were considered and designed nicely, had not been properly addressed in the final prototype/design as discussed more in the self-reflection/conclusion stage of this documentation). Below demonstrates the image comparisons from 7 pages to 5 pages alongside proper explanation behind it </p>
+        <p> The use of CSS Flexbox was an essential and critical component towards the development of my "Our Impact" and "Your Impact" pages - they were aligned in different positions and required proper div tags and also flexbox css properties in order to align them accordingly (as I wanted on my mockup designs). Before the use of Flexbox, I had a hard time properly aligning them and found it impossible to do - and the discovery it had just made things much much easier, with the tool being very powerful and useful in properly aligning the images and textual elements accordingly. For instance - for my "Your Impact" page - I had used <b> according column divs - housing row divs </b> (as shown in the following images below) in order to align them properly, using the <b> flex-direction CSS property </b>to properly align them to <b> column or row elements as such </b>. Below are images showing the transition between not using Flexbox and using Flexbox alongside the outcome of the Impact Pages and the according code to it </p>
+        <h4> Flexbox Transition </h4>
+        </br>
+          <img src = "Flexbox.png" alt = "Sitemap2" style = "width: 100%">
+          </br>
+        <h4> Impact Pages</h4>
+        </br>
+          <img src = "Impact Pages.png" alt = "Sitemap2" style = "width: 100%">
+          </br>
+        <h4> Our Impact Codes </h4>
+        </br>
+          <img src = "HTML Our Impact.png" alt = "Sitemap2" style = "width: 100%">
+          <img src = "CSS Our Impact.png" alt = "Sitemap2" style = "width: 100%">
+          </br>
+        <h4> Your Impact Codes </h4> 
+        </br>
+          <img src = "HTML Your Impact.png" alt = "Sitemap2" style = "width: 100%">
+          <img src = "CSS Your Impact.png" alt = "Sitemap2" style = "width: 100%">
+          </br>
       </section>
 
       <section>
         <h3 id = "Donation_Pages"> Donation Pages </h2> 
-        <p> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Recusandae sapiente nostrum autem eligendi error explicabo inventore accusamus. Earum qui ullam, quibusdam, nemo nihil cumque excepturi dolor necessitatibus id impedit numquam. </p>
+        <p> Whilst the donation pages didn't come up to my standards (both semantically in terms of the HTML and CSS codes not being properly done - ie using too many margins etc instead of flexbox properties or even experimentation with CSS grid) it was overall something I liked - with the additional hover animations (as discussed in the next section) adding a bit more aesthethic and fun design. The donation pages worked via the first donate now option on the single-flow scrolling page to which linked to a seperate other donation form - allowing the user to become more situated and more likely towards the call-to-action of donating to World Vision in this case. The option to go back was also apparent on the top right if the user had decided to go back as well. Below demonstrates the donation pages alongside the code used as well - with a snippet of the CSS code for the donation image showcasing how it could've been done better (ie without margins or with use of div tags in the HTML tag for next time)</p>
+        <h4> </h4>
+        <h4> </h4>
+        <blockquote>
+        <figcaption> </figcaption>
+        </blockquote>
       </section>
 
       <section>
