Finished all sections for documentation

--- a/index.html
+++ b/index.html
@@ -126,26 +126,74 @@
           <img src = "HTML Your Impact.png" alt = "Sitemap2" style = "width: 100%">
           <img src = "CSS Your Impact.png" alt = "Sitemap2" style = "width: 100%">
           </br>
+        <blockquote>
+          <figcaption> Note: All in all, I'm happy with the look and outcome of the two impact pages the most as the use of Flexbox - a CSS option I have never used before came in play and worked beautifully - allowing for a nicely structured design as such </figcaption>
+        </blockquote>
       </section>
 
       <section>
         <h3 id = "Donation_Pages"> Donation Pages </h2> 
         <p> Whilst the donation pages didn't come up to my standards (both semantically in terms of the HTML and CSS codes not being properly done - ie using too many margins etc instead of flexbox properties or even experimentation with CSS grid) it was overall something I liked - with the additional hover animations (as discussed in the next section) adding a bit more aesthethic and fun design. The donation pages worked via the first donate now option on the single-flow scrolling page to which linked to a seperate other donation form - allowing the user to become more situated and more likely towards the call-to-action of donating to World Vision in this case. The option to go back was also apparent on the top right if the user had decided to go back as well. Below demonstrates the donation pages alongside the code used as well - with a snippet of the CSS code for the donation image showcasing how it could've been done better (ie without margins or with use of div tags in the HTML tag for next time)</p>
-        <h4> </h4>
-        <h4> </h4>
+        <h4> Donation Pages</h4>
+        </br>
+          <img src = "Donate Now.png" alt = "Sitemap2" style = "width: 100%">
+          </br>
+          <img src = "Donate Form.png" alt = "Sitemap2" style = "width: 100%">
+        <h4> Donation Code </h4>
+        </br>
+          <img src = "HTML Donation.png" alt = "Sitemap2" style = "width: 100%">
+          </br>
+          <img src = "CSS Donation.png" alt = "Sitemap2" style = "width: 100%">
+          </br>
         <blockquote>
-        <figcaption> </figcaption>
+        <figcaption> Note: I'm happy about the inclusion of the donation form on the other page (as it wasn't initially intended to be like that - instead being on the normal one-scroll page side) providing more focus towards the call-to-action of donating alongside being a nice way to properly allow the user to enter in their personal details after choosing their cause and amount. Unfortunately as a result of time constraints - the image carousel I was intially going to have whereby it would scroll past to show the benefits of donating, was not done - to which was quite a nice feature I appreciated and liked but however was not able to do as such. </figcaption>
         </blockquote>
       </section>
 
       <section>
         <h3 id = "Additional_Changes"> Additional Changes and Additions </h2> 
-        <p> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Recusandae sapiente nostrum autem eligendi error explicabo inventore accusamus. Earum qui ullam, quibusdam, nemo nihil cumque excepturi dolor necessitatibus id impedit numquam. </p>
+        <p> Additional added elements were also added to my website - including the use of simple bottom hover animations alongside a footer showing World Vision's contact details instead of an image carousel - to which helped show their contact details at all times instead of being exclusive to the home page area due to the footer being fixed to the bottom section as the user scrolls bar. The addition of a button hover option was according to not only my own judgement initally but also from user feedback (as shown more in the self-reflection section) whereby suggestions towards adding it to make the website more dynamic and interesting were done. However - looking back, I should've also done more animations such as little image hover bobbles or nav bar animations as a way to be more creative and less dynamic - however I'm relatively happy about the button hover animations and also interaction with the drop-down menu and input fields for the donation-form. The footer was also a nice addition - linking to World Vision's social medias via the use of font-awesome icons alongside text detailing their contact numbers as well. Below are the according images of these additional changes and additions alongside the codes for it as well. </p>
+        <h4> Footer Component </h4>
+        </br>
+          <img src = "Footer Component.png" alt = "Sitemap2" style = "width: 100%">
+          </br>
+          </br>
+        <h4> Hover Options </h4>
+           <img src = "Hover Options.png" alt = "Sitemap2" style = "width: 100%">
+           </br>
+        <h4> Code Segments for Hover and Footer</h4> 
+        </br>
+            <img src = "CSS Hover.png" alt = "Sitemap2" style = "width: 100%">
+            <img src = "HTML Footer.png" alt = "Sitemap2" style = "width: 100%">
+            <img src = "CSS Footer.png" alt = "Sitemap2" style = "width: 100%">
+            </br>
+        <blockquote>
+          <figcaption> Note: All in all - I'm happy about the extra additions I made as a way to make my website more aesthethically pleasing as well as a good way to show feedback to the user (e.g. colour changes when hovering over donation amount and continue/donate now button) alongside the extra addition of the simple yet effective footer - not being too obstructive. The addition for the font-awesome icons being something new to me - were also a nice addition and conveyed World Vision's contact details properly as well</figcaption>
+        </blockquote>
+
       </section>
 
       <section>
         <h3 id = "Self_Reflection"> Self-Reflection and Considerations </h2> 
-        <p> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Recusandae sapiente nostrum autem eligendi error explicabo inventore accusamus. Earum qui ullam, quibusdam, nemo nihil cumque excepturi dolor necessitatibus id impedit numquam. </p>
+        <p> Overall, I'm relatively happy with the outcome of my website proposal/prototype - given my time constraints alongside how I was able to accordingly follow majority of my design aesthethics and layout given the mockups - to which were useful by the end of it. I was also happy about the process towards coding it - ie doing the overall basic format first and then coding the individual pages and other responsive sizes accordingly. However - the main issue to which occurred was the lack of responsive design - to which was something addressed in user feedback but couldn't be properly addressed due to time constraints alongside the difficulty I had in managing my HTML/CSS code which could've been planned and managed more better and productively via experimenting or doing them on other pages before combining them altogether. Below are images demonstrating the final website outcome look alongside user feedback to which was and was not/couldn't be implemented or considered on time </p>
+        <h4> Final Website Outcome </h4>
+        </br>
+          <img src = "Final Website Outcome.png" alt = "Sitemap2" style = "width: 100%">
+          <img src = "Donate Form Page Final.png" alt = "Sitemap2" style = "width: 100%">
+
+          </br>
+          </br>
+        <h4> No Proper Responsive Design </h4>
+           <img src = "No Responsiveness.png" alt = "Sitemap2" style = "width: 100%">
+           </br>
+        <h4>User Feedback</h4> 
+        </br>
+            <img src = "User Feedback.png" alt = "Sitemap2" style = "width: 100%">
+            </br>
+        <blockquote>
+          <figcaption> For the future - I'll make sure to <b> address responsive design </b> as something to which should be considered or experimented with first (as I could've tried it on the different sections such as Our Impact on a different page of code in order to see how responsive design can be adjusted accordingly) alongside properly adding more dynamic features to the website to make it pop-out even more. However, the overall concept of the website was done well in my opinion - helping to focus on the call-to-action to donate to World Vision after knowing what the organisation's impact is and what the user's impact can be via donating. The appropriate user feedback is also something that helped a lot with the refinement of the website versions/iterations over time as well. </figcaption>
+        </blockquote>
+        
       </section>
 
       <section> 
