Added extra reference - but Final Code For Website Proposal and Documentation Done

--- a/index.html
+++ b/index.html
@@ -219,6 +219,7 @@
         <p> World Vision. (2020). World Emergencies [Image]. Retrieved from https://www.worldvision.com.au/global-issues/world-emergencies </p> 
         <p> Peter, S., & Turner, T. (2020). Vaccination provokes a response [Image]. Retrieved from https://blog.worldvision.com.au/vaccination-provokes-a-response/ </p> 
         <p >World Vision. (2020). Livelihood and Resilience [Image]. Retrieved from https://www.wvi.org/congo/our-work/livelihood-and-resilience </p> 
+        <p> Person Icon:  Computer Icons Person , Name Transparent Background PNG Clipart. (n.d.). Retrieved from: https://www.clipart.email/download/7861017.html </p>
         <p> Font Awesome (2020). Retrieved 27 November 2020, from https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css  </p>
         <p> Google Fonts, (2020). Montserrat. Retrieved 27 November 2020, from https://fonts.google.com/specimen/Montserrat?query=Mon&sidebar.open=true&selection.family=Montserrat </p>
       </section>
